fix: drop from drawer (z-index fault)
fix: bank padding
fix: coat and look placeholder (z-index fault)

--- a/src/assets/styles/common.css
+++ b/src/assets/styles/common.css
@@ -15,10 +15,6 @@ body,
   max-width: 800px;
 }
 
-#drawer {
-  z-index: 6;
-}
-
 .fixed-tabs > div {
   width: 800px;
   max-width: 800px;
